src/mahantufa/cmaxes.js.unwrapped.js
// Generated by Peggy 1.2.0.
//
// https://peggyjs.org/

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var loc = this.location.source + ":" + s.line + ":" + s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", s.line.toString().length);
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1)
          + peg$padEnd("", last - s.column, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { text: peg$parsetext };
  var peg$startRuleFunction = peg$parsetext;


  var peg$r0 = /^[a]/;
  var peg$r1 = /^[aeo]/;
  var peg$r2 = /^[aeiou]/;
  var peg$r3 = /^[i]/;
  var peg$r4 = /^[u]/;
  var peg$r5 = /^[y]/;
  var peg$r6 = /^[i\u0269]/;
  var peg$r7 = /^[uw]/;
  var peg$r8 = /^[l]/;
  var peg$r9 = /^[m]/;
  var peg$r10 = /^[n]/;
  var peg$r11 = /^[r]/;
  var peg$r12 = /^[pfbgvkx]/;
  var peg$r13 = /^[d]/;
  var peg$r14 = /^[jz]/;
  var peg$r15 = /^[cs]/;
  var peg$r16 = /^[x]/;
  var peg$r17 = /^[t]/;
  var peg$r18 = /^[,']/;
  var peg$r19 = /^[}]/;
  var peg$r20 = /^[^a-za-z,']/;
  var peg$r21 = /^[^ ]/;

  var peg$e0 = peg$classExpectation(["a"], false, false);
  var peg$e1 = peg$classExpectation(["a", "e", "o"], false, false);
  var peg$e2 = peg$classExpectation(["a", "e", "i", "o", "u"], false, false);
  var peg$e3 = peg$classExpectation(["i"], false, false);
  var peg$e4 = peg$classExpectation(["u"], false, false);
  var peg$e5 = peg$classExpectation(["y"], false, false);
  var peg$e6 = peg$classExpectation(["i", "\u0269"], false, false);
  var peg$e7 = peg$classExpectation(["u", "w"], false, false);
  var peg$e8 = peg$classExpectation(["l"], false, false);
  var peg$e9 = peg$classExpectation(["m"], false, false);
  var peg$e10 = peg$classExpectation(["n"], false, false);
  var peg$e11 = peg$classExpectation(["r"], false, false);
  var peg$e12 = peg$classExpectation(["p", "f", "b", "g", "v", "k", "x"], false, false);
  var peg$e13 = peg$classExpectation(["d"], false, false);
  var peg$e14 = peg$classExpectation(["j", "z"], false, false);
  var peg$e15 = peg$classExpectation(["c", "s"], false, false);
  var peg$e16 = peg$classExpectation(["x"], false, false);
  var peg$e17 = peg$classExpectation(["t"], false, false);
  var peg$e18 = peg$classExpectation([",", "'"], false, false);
  var peg$e19 = peg$classExpectation(["}"], false, false);
  var peg$e20 = peg$anyExpectation();
  var peg$e21 = peg$classExpectation([["a", "z"], ["a", "z"], ",", "'"], true, false);
  var peg$e22 = peg$classExpectation([" "], true, false);

  var peg$f0 = function(children) {const l = location(); return { rule: "text", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f1 = function(children) {const l = location(); return { rule: "any_word", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f2 = function(children) {const l = location(); return { rule: "jbovla", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f3 = function(children) {const l = location(); return { rule: "cmevla", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f4 = function(children) {const l = location(); return { rule: "gismu", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f5 = function(children) {const l = location(); return { rule: "fuhivla_head", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f6 = function(children) {const l = location(); return { rule: "fuhivla_trim", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f7 = function(children) {const l = location(); return { rule: "generic_fuhivla", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f8 = function(children) {const l = location(); return { rule: "fuhivla", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f9 = function(children) {const l = location(); return { rule: "cmavo", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f10 = function(children) {const l = location(); return { rule: "lujvo_core", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f11 = function(children) {const l = location(); return { rule: "any_fuhivla_rafsi", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f12 = function(children) {const l = location(); return { rule: "rafsi_string", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f13 = function(children) {const l = location(); return { rule: "zifcme", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f14 = function(children) {const l = location(); return { rule: "stressed_fuhivla_rafsi", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f15 = function(children) {const l = location(); return { rule: "fuhivla_rafsi", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f16 = function(children) {const l = location(); return { rule: "stressed_y_rafsi", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f17 = function(children) {const l = location(); return { rule: "y_rafsi", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f18 = function(children) {const l = location(); return { rule: "y_less_rafsi", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f19 = function(children) {const l = location(); return { rule: "stressed_hy_rafsi", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f20 = function(children) {const l = location(); return { rule: "hy_rafsi", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f21 = function(children) {const l = location(); return { rule: "cvc", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f22 = function(children) {const l = location(); return { rule: "cvc_ccv", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f23 = function(children) {const l = location(); return { rule: "ccv", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f24 = function(children) {const l = location(); return { rule: "cvv", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f25 = function(children) {const l = location(); return { rule: "cvc_ccv_cvv", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f26 = function(children) {const l = location(); return { rule: "cvvr", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f27 = function(children) {const l = location(); return { rule: "gismu_cvv_final_rafsi", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f28 = function(children) {const l = location(); return { rule: "short_final_rafsi", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f29 = function(children) {const l = location(); return { rule: "unstressed_syllable", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f30 = function(children) {const l = location(); return { rule: "long_rafsi", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f31 = function(children) {const l = location(); return { rule: "cv", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f32 = function(children) {const l = location(); return { rule: "final_syllable", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f33 = function(children) {const l = location(); return { rule: "stress", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f34 = function(children) {const l = location(); return { rule: "any_syllable", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f35 = function(children) {const l = location(); return { rule: "slaka", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f36 = function(children) {const l = location(); return { rule: "consonantal_syllable", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f37 = function(children) {const l = location(); return { rule: "coda", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f38 = function(children) {const l = location(); return { rule: "onset", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f39 = function(children) {const l = location(); return { rule: "nucleus", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f40 = function(children) {const l = location(); return { rule: "glaide", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f41 = function(children) {const l = location(); return { rule: "re_zei_karsna", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f42 = function(children) {const l = location(); return { rule: "pa_zei_karsna", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f43 = function(children) {const l = location(); return { rule: "i", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f44 = function(children) {const l = location(); return { rule: "u", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f45 = function(children) {const l = location(); return { rule: "y", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f46 = function(children) {const l = location(); return { rule: "ɩ", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f47 = function(children) {const l = location(); return { rule: "w", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f48 = function(children) {const l = location(); return { rule: "initial_pair", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f49 = function(children) {const l = location(); return { rule: "affricate", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f50 = function(children) {const l = location(); return { rule: "zunsna", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f51 = function(children) {const l = location(); return { rule: "syllabic", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f52 = function(children) {const l = location(); return { rule: "l", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f53 = function(children) {const l = location(); return { rule: "m", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f54 = function(children) {const l = location(); return { rule: "n", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f55 = function(children) {const l = location(); return { rule: "r", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f56 = function(children) {const l = location(); return { rule: "pfbgvkx", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f57 = function(children) {const l = location(); return { rule: "d", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f58 = function(children) {const l = location(); return { rule: "jz", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f59 = function(children) {const l = location(); return { rule: "cs", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f60 = function(children) {const l = location(); return { rule: "x", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f61 = function(children) {const l = location(); return { rule: "t", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f62 = function(children) {const l = location(); return { rule: "h", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f63 = function(children) {const l = location(); return { rule: "post_word", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f64 = function(children) {const l = location(); return { rule: "pause", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f65 = function(children) {const l = location(); return { rule: "pause_0", text: text(), start: l.start.offset, end: l.end.offset, children };};
  var peg$f66 = function(children) {const l = location(); return { rule: "nul", text: text(), start: l.start.offset, end: l.end.offset, children };};

  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$resultsCache = {};

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsetext() {
    var s0, s1, s2;

    var key = peg$currPos * 67 + 0;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseany_word();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseany_word();
    }
    peg$savedPos = s0;
    s1 = peg$f0(s1);
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseany_word() {
    var s0, s1;

    var key = peg$currPos * 67 + 1;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parsejbovla();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f1(s1);
    }
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsejbovla() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    var key = peg$currPos * 67 + 2;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parsepause_0();
    if (s1 === peg$FAILED) {
      s1 = peg$parsecmevla();
      if (s1 === peg$FAILED) {
        s1 = peg$parsecmavo();
        if (s1 === peg$FAILED) {
          s1 = peg$parsegismu();
          if (s1 === peg$FAILED) {
            s1 = peg$currPos;
            s2 = peg$currPos;
            peg$silentFails++;
            s3 = peg$parsegismu();
            peg$silentFails--;
            if (s3 === peg$FAILED) {
              s2 = undefined;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
            if (s2 !== peg$FAILED) {
              s3 = peg$currPos;
              peg$silentFails++;
              s4 = peg$parsefuhivla();
              peg$silentFails--;
              if (s4 === peg$FAILED) {
                s3 = undefined;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
              if (s3 !== peg$FAILED) {
                s4 = peg$currPos;
                peg$silentFails++;
                s5 = peg$parsecmavo();
                peg$silentFails--;
                if (s5 === peg$FAILED) {
                  s4 = undefined;
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
                if (s4 !== peg$FAILED) {
                  s5 = peg$currPos;
                  peg$silentFails++;
                  s6 = peg$currPos;
                  s7 = peg$parseccv();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parseh();
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parsey();
                      if (s9 !== peg$FAILED) {
                        s10 = peg$parseonset();
                        if (s10 !== peg$FAILED) {
                          s7 = [s7, s8, s9, s10];
                          s6 = s7;
                        } else {
                          peg$currPos = s6;
                          s6 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s6;
                        s6 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s6;
                      s6 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s6;
                    s6 = peg$FAILED;
                  }
                  peg$silentFails--;
                  if (s6 === peg$FAILED) {
                    s5 = undefined;
                  } else {
                    peg$currPos = s5;
                    s5 = peg$FAILED;
                  }
                  if (s5 !== peg$FAILED) {
                    s6 = peg$parselujvo_core();
                    if (s6 !== peg$FAILED) {
                      s2 = [s2, s3, s4, s5, s6];
                      s1 = s2;
                    } else {
                      peg$currPos = s1;
                      s1 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s1;
                    s1 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s1;
                  s1 = peg$FAILED;
                }
              } else {
                peg$currPos = s1;
                s1 = peg$FAILED;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
            if (s1 === peg$FAILED) {
              s1 = peg$parsefuhivla();
            }
          }
        }
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f2(s1);
    }
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsecmevla() {
    var s0, s1, s2, s3, s4, s5;

    var key = peg$currPos * 67 + 3;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$currPos;
    peg$silentFails++;
    s3 = peg$parsezifcme();
    peg$silentFails--;
    if (s3 !== peg$FAILED) {
      peg$currPos = s2;
      s2 = undefined;
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = peg$parseany_syllable();
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseany_syllable();
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$currPos;
        peg$silentFails++;
        s5 = peg$parsepause();
        peg$silentFails--;
        if (s5 !== peg$FAILED) {
          peg$currPos = s4;
          s4 = undefined;
        } else {
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          s2 = [s2, s3, s4];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 === peg$FAILED) {
      s1 = peg$parsezifcme();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f3(s1);
    }
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsegismu() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    var key = peg$currPos * 67 + 4;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
